# findx

./: .gitignore  .travis.yml  CHANGES.rst  Dockerfile  LICENSE.rst  MANIFEST.in  Makefile  README.rst  README.txt  activate-py2.6.sh  activate-py3.3.sh  dev-requirements.txt  ffg-wrapper.py  ffx-wrapper.py  findx-wrapper.py  findx.py  gnu-find-switches.txt  maintainer.rst  noxfile.py  pypath.sh  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/actions/run-docker/: action.yml
.github/actions/setup-poetry-nox/: action.yml
.github/actions/setup-uv-nox/: action.yml
.github/workflows/: build.yml  ci.yml
doc/: allswitches.txt  notes.txt
scripts/: survey-switches
src/: findx.py
src/findx/: __init__.py
test/: test.py  test_findx.py
tests/: test_findx.py
